--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,25 @@
 version: '3.8'
 
 services:
+  backend:
+    build: ./backend
+    container_name: skate_backend
+    command: python manage.py runserver 0.0.0.0:8000
+    volumes:
+      - ./backend:/app
+    ports:
+      - "8000:8000"
+    environment:
+      - SECRET_KEY=dev_secret_key
+      - DEBUG=True
+      - DB_NAME=skating_db
+      - DB_USER=postgres
+      - DB_PASSWORD=postgres
+      - DB_HOST=db
+      - DB_PORT=5432
+    depends_on:
+      - db
+
   db:
     image: postgres:15-alpine
     restart: always
