--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,3 +6,6 @@ psycopg2-binary==2.9.11
 python-decouple==3.8
 sqlparse==0.5.5
 typing_extensions==4.15.0
+dj-rest-auth>=5.0.0
+django-allauth>=0.58.0
+djangorestframework-simplejwt>=5.3.0
