--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,18 @@ services:
     depends_on:
       - db
 
+  frontend:
+    build: ./frontend
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    ports:
+      - "5173:5173"
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+    depends_on:
+      - backend
+
   db:
     image: postgres:15-alpine
     restart: always
