--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,9 +21,9 @@ services:
 
   frontend:
     build: ./frontend
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
+    #volumes:
+    #  - ./frontend:/app
+    #  - /app/node_modules
     expose:
       - "5173"
     environment:
