--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.11.0
+dj-database-url==3.0.1
 Django==5.2.9
 django-cors-headers==4.9.0
 djangorestframework==3.16.1
@@ -6,6 +7,3 @@ psycopg2-binary==2.9.11
 python-decouple==3.8
 sqlparse==0.5.5
 typing_extensions==4.15.0
-dj-rest-auth>=5.0.0
-django-allauth>=0.58.0
-djangorestframework-simplejwt>=5.3.0
