--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,57 @@
 version: '3.8'
+
 services:
   backend:
     build: ./backend
     container_name: skate_backend
-    command: 'python manage.py runserver 0.0.0.0:8000'
+    command: python manage.py runserver 0.0.0.0:8000    #volumes:
+    #  - ./backend:/app
     expose:
-      - '8000'
+      - "8000"
     environment:
-      - 'SECRET_KEY=${SECRET_KEY}'
+      - SECRET_KEY=dev_secret_key
       - DEBUG=True
-      - 'DATABASE_URL=${DATABASE_URL}' 
-  
+      - DB_NAME=skating_db
+      - DB_USER=postgres
+      - DB_PASSWORD=postgres
+      - DB_HOST=db
+      - DB_PORT=5432
+    depends_on:
+      - db
+
   frontend:
     build: ./frontend
+    #volumes:
+    #  - ./frontend:/app
+    #  - /app/node_modules
     expose:
-      - '5173'
+      - "5173"
     environment:
       - CHOKIDAR_USEPOLLING=true
     depends_on:
       - backend
 
+  db:
+    image: postgres:15-alpine
+    restart: always
+    environment:
+      - POSTGRES_DB=skating_db
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+    ports:
+      - "127.0.0.1:5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+  pgadmin:
+    image: dpage/pgadmin4
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - "5050:80"
+    depends_on:
+      - db
+
+volumes:
+  postgres_data:
