--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,10 @@
-# Django base
 Django>=4.2.0
 djangorestframework>=3.14.0
 psycopg2-binary>=2.9.9
 dj-database-url>=2.1.0
 gunicorn>=21.2.0
-
-# Autenticación y Seguridad (Aquí estaba el fallo)
 dj-rest-auth>=5.0.0
 django-allauth>=0.61.0
 djangorestframework-simplejwt>=5.3.1
 django-cors-headers>=4.3.1
+python-decouple>=3.8
